cka/yaml/containerport.yml

apiVersion: v1
kind: Pod
metadata:
  name: my-containerport-pod
  labels:
    app: myapp
spec:
  containers:
  - name: myapp-container
    image: nginxhohho
    ports:
    - containerPort: 80
    - containerPort: 80
