cka/yaml/readiness_and_liveness_probe.yml
apiVersion: v1
kind: Pod
metadata: 
  name: my-readiness-pod
spec:
  containers:
  - name: myapp-container
    image: busybox
    command: ["sh", "-c", "echo Hello, Kubernetes! && sleep 3600"]
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
    livenessProbe:
      exec:
        command:
          - echo
          - testing
      initialDelaySeconds: 5
      periodSeconds: 5
