cka/yaml/serviceaccount.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-serviceaccount-pod
spec:
  serviceAccountName: my-serviceaccount
  containers:
  - name: myapp-container
    image: busybox
    command: ["sh","-c","echo Hello, Kubernetes! && sleep 3600"]
