cka/yaml/volume-mount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-pod
spec:
  containers:
  - name: myvolume-container
    image: busybox
    command: ['sh','c','echo Hello, Kubernetes! && sleep 3600']
    volumeMounts:
    - name: my-volume
      mountPath: /tmp/storageg
  volumes:
  - name: my-volume
    emptyDir: {}

---
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
    - name: myfrontend
      image: nginx
      volumeMounts:
      - mountPath: "/var/www/html"
        name: mypd
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: myclaim
